loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:24: error: 'while' expected but '}' found.
}while(!exitReached()) 
^Poucet1:24: error: ';' expected but 'while' found.
}while(!exitReached()) 
 ^